# CodeCraft2023_Children-s_Day_Group

./: CMakeLists.txt  README.md  Robot  Robot_gui  run_demo_without_gui.sh  run_keyboard_demo.sh  run_simple_demo.sh  rviz.rviz
Demo/: SimpleDemo
maps/: 3.txt  4.txt
src/: astar.cpp  astar.hpp  car_model.hpp  circle_fit.cpp  circle_fit.hpp  common.hpp  controller.hpp  env.cpp  env.hpp  fighting.cpp  fighting.hpp  lidar_data.hpp  main.cpp  mpc.cpp  newton_method.hpp  scheduler.cpp  scheduler.hpp  sdf.hpp  trajectory_optimization.cpp  trajectory_optimization.hpp
